BastionHost-CloudFormation-Template.yaml
---
AWSTemplateFormatVersion: '2010-09-09'

Resources:
  VPC: AWS::EC2::VPC
  CidrBlock: 172.31.0.0/20
  EnableDnsSUpport: true
  EnableDnsHostNames: true
  InstanceTenancy: default

InternetGatewayAttachment:
  Type: AWS::EC2::InternetGateway

VPCGatewayAttachment:
  Type: AWS::EC2::VPCGatewayAttachment
  Properties:
    VPCId: !Ref VPC
    InternetGatewayId: !Ref IntenetGateway

SubnetA:
  Type: AWS::EC2::Subnet
  Properties: 
    AvailabilityZone: us-east-1a
    VPCId: !Ref VPC
    CidrBlock: 172.31.0.0/20
    MapPublicIpOnLaunch: true

SubnetB:
  Type: AWS::EC2::Subnet
  Properties:
    AvailabilityZone: us-east-1b
    VPCId: !Ref VPC
    CidrBlock: 172.31.16.0/20
    MapPublicIpOnLaunch: true

RouteTable:
  Type: AWS::EC2::RouteTable  
  Properties:
    VPCId: !Ref VPC

InternetRoute:
  Type: AWS::EC2::Route
  DependsOn: InternetGateway
  Properties:
    DestinationCidrBlock: 0.0.0.0/0
    GatewayId: !Ref InternetGateway
    RouteTableId: !Ref RouteTable

SubnetRouteTableAssociation:
  Type: AWS::EC2::SubnetRouteAssociation
  Properties: 
    RouteTableId: !Ref RouteTable
    SubnetId: !Ref SubnetA

SubnetRouteTableAssociation:
  Type: AWS::EC2::SubnetRouteAssociation
  Properties:
    RouteTableId: !Ref RouteTable
    SubnetId: !Ref SubnetB

SecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupName: "Internet Group"
    GroupDescription: "SSH else out"
    VPCId: !Ref VPC
    SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        Cidr: 0.0.0.0/0
    SecurityGroupEgress:
      - IpProtocol: -1
        Cidr: 0.0.0.0/0

BastionMainLogGroup:
  Type: AWS::Logs::LogGroup
  SshMetricFilter:
    Type: AWS::Logs::MetricFilter
    Properties:
      LogGroupName: !Ref BastionMainLogGroup

BastionHostRule:
  Type: AWS::IAM::Role
  Properties:
    Policies:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          Action: 
            s3:GetObject

BastionAMIOS:
  Type: AWS::EC2::BastionHost
  Properties: 

BastionInstanceType:

Nat:
  Type: AWS::EC2::NatGateway
  Properties:
    Allocation: String
    SubnetId: !Ref SubnetA
    Tages:
      - Resource Tag
